# tutorial

./: README.md
Step10DynamicSharedCode/: CMakeLists.txt  ReadMe.md  compile.sh  program1.cpp  program2.cpp  program3.cpp
Step10DynamicSharedCode/lib/: CMakeLists.txt  DynamicSharedCode.cpp  DynamicSharedCode.hpp
Step11ExternalLib/: CMakeLists.txt
Step11ExternalLib/cmake/: FindSAY_HELLO.cmake
Step11ExternalLib/inc/: hello.h
Step11ExternalLib/lib/: libsayHello.dylib
Step3/: CMakeLists.txt  TutorialConfig.h.in
Step3/MathFunctions/: CMakeLists.txt
Step8Private/: CMakeLists.txt  main.c
Step8Private/hello_world/: CMakeLists.txt  hello_world.c  hello_world.h
Step8Private/hello_world/hello/: CMakeLists.txt  hello.c
Step8Private/hello_world/world/: CMakeLists.txt  world.c  world.h
Step9Normal/: CMakeLists.txt  main.c
Step9Normal/src/: CMakeLists.txt  hello.c
